--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
     }
   ],
   "require": {
-    "php": ">=5.4",
-    "amphp/artax": "2.*",
+    "php": ">=7.0",
     "zendframework/zend-cache": "~2.7",
     "zendframework/zend-modulemanager": "~2.7",
     "zendframework/zend-mvc": "~2.7",
-    "php-http/guzzle6-adapter": "1.*"
+    "php-http/guzzle6-adapter": "1.*",
+    "amphp/http-client": "^4.2",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-0": {
@@ -34,5 +35,9 @@
     "classmap": [
       "./Module.php"
     ]
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8",
+    "symfony/var-dumper": "^5.0"
   }
 }
