--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
   "require": {
     "php": ">=5.4",
     "amphp/artax": "2.*",
-    "zendframework/zend-cache": "~2.7",
-    "zendframework/zend-modulemanager": "~2.7",
-    "zendframework/zend-mvc": "~2.7",
+    "laminas/laminas-cache": "~2.9",
+    "laminas/laminas-modulemanager": "~2.8",
+    "laminas/laminas-mvc": "^3.1",
     "php-http/guzzle6-adapter": "1.*"
   },
   "autoload": {
